fixed video being unclickable on mobile - ahhhh this css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1641,7 +1641,6 @@
 	}
 
 		#header-wrapper:before {
-			content: '';
 			position: absolute;
 			top: 0;
 			left: 0;
